# trabalho-bd-2

./: .gitignore  README.md  deps.py  main.py  map_router.py  pyproject.toml  queries_router.py
notebooks/: data_processing.ipynb
queries/: __init__.py  queries_module.py
startup/: data_initialization.py  db_initialization.py
templates/: map.html
templates/static/css/: map.css
templates/static/js/: map.js
