[project]
name = "trabalho-bd-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "couchdb>=1.2",
    "docker>=7.1.0",
    "fastapi[standard]>=0.116.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "requests>=2.32.4",
    "yarl>=1.20.1",
]
